--- a/index.html
+++ b/index.html
@@ -136,21 +136,28 @@
         }
         .net {
             width: 90px;
-            height: 60px;
-            border: 2px solid #ccc;
-            border-top: none;
-            border-radius: 0 0 50% 50%;
-            position: absolute;
-            top: 155px;
-            right: 55px;
-            background: repeating-linear-gradient(
-                45deg,
-                transparent,
-                transparent 5px,
-                #eee 5px,
-                #eee 10px
-            );
-            z-index: 1;
+    height: 60px;
+    border: 2px solid #ccc;
+    border-top: none;
+    border-radius: 0 0 50% 50%;
+    position: absolute;
+    top: 155px;
+    right: 55px;
+    background: repeating-linear-gradient(
+        45deg,
+        transparent,
+        transparent 5px,
+        #eee 5px,
+        #eee 10px
+    );
+    animation: swish 1s infinite;
+    z-index: 1;
+}
+
+@keyframes swish {
+    0% { transform: rotate(0deg); }
+    50% { transform: rotate(10deg); }
+    100% { transform: rotate(0deg); }
         }
         #timer-container, #score-container {
             position: absolute;
