--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         #score-container {
             top: 10px;
             right: 10px;
-            color: green;
+            color: black;
         }
         #transition-screen {
             position: absolute;
@@ -202,7 +202,7 @@
 <body>
     <div id="background"></div>
     <div id="quiz-container">
-        <h1>Basketball Quiz Game</h1>
+        <h1 style="border: 2px solid black; padding: 10px; display: inline-block;">Basketball Quiz Game</h1>
         <div id="timer-container">Time Remaining: <span id="timer">45</span></div>
         <div id="score-container">Score: <span id="score">0</span></div>
         <div id="question"></div>
